small changes in code via sonarqube