@@ -51,7 +51,7 @@ public class UserService implements UserDetailsService {
         List<User> users = userRepository.findAll();
         return users.stream()
                 .map(this::convertToUserDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
